<resources>
    <string name="app_name">WeRepair</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_conf">Re-enter Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_bottom_test">BottomActivityTest</string>
    <string name="title_nearme">Nearby</string>
    <string name="title_dashboard">Repairs</string>
    <string name="title_notifications">My Alerts</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">My Profile</string>
    <string name="title_activity_app_settings">S</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="titles">
        <item>Repair 1</item>
        <item>Repair 2</item>
        <item>Repair 3</item>
    </string-array>

    <array name="icons">
        <item>@drawable/rep1</item>
        <item>@drawable/rep2</item>
        <item>@drawable/rep3</item>
    </array>

    <string-array name="dates">
        <item>Just now</item>
        <item>10 minutes ago</item>
        <item>50 minutes ago</item>
        <item>2 hours ago</item>
        <item>8 hours ago</item>
        <item>10 hours ago</item>
        <item>Yesterday</item>
        <item>Wednesday</item>
        <item>Tuesday</item>
        <item>Monday</item>
    </string-array>

    <string-array name="notitxt">
        <item>Username invited you for a repair.</item>
        <item>Username liked your profile.</item>
        <item>Username sent you a message.</item>
        <item>Username liked your profile.</item>
        <item>Username sent you a message.</item>
        <item>Username sent you a message.</item>
        <item>Username liked your profile.</item>
        <item>Your application has been accepted.</item>
        <item>Username sent you a message.</item>
        <item>Username invited you for a repair.</item>
    </string-array>

    <string-array name="messtxt">
        <item>Are you available today?</item>
        <item>Hi! Launch</item>
        <item>Can I have you contact details?</item>
        <item>Are you available on Monday?</item>
        <item>Lets meetup?.</item>
        <item>How are you?.</item>
        <item>Dinner?</item>
        <item>Are you available this Sunday?</item>
        <item>Can you repair my AC?</item>
        <item>Hello!</item>
    </string-array>

    <array name="proicons">
        <item>@drawable/pro1</item>
        <item>@drawable/pro2</item>
        <item>@drawable/pro3</item>
        <item>@drawable/pro4</item>
        <item>@drawable/pro5</item>
        <item>@drawable/pro6</item>
        <item>@drawable/pro7</item>
        <item>@drawable/pro8</item>
        <item>@drawable/pro9</item>
        <item>@drawable/pro10</item>
    </array>


</resources>
