<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item

        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/noti"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_nearme"
        android:icon="@drawable/nearme"
        android:title="@string/title_nearme" />


    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/message"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_notifications" />

</menu>
