<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/appBackground"
    tools:context=".Views.UserLoginActivity">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="60dp"
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:paddingBottom="60dp"
                android:text="WeRepair"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="50dp"
                android:textAlignment="center"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:backgroundTint="@color/white"
                    android:theme="@style/EditTextTheme"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:theme="@style/EditTextTheme"
                    android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="NewLogin"
            android:textColor="#ff00ffff"
            android:background="@drawable/app_button"
            android:text="Sign in"
            android:textColorHint="@color/lightBlue"
            android:textStyle="bold" />

            <TextView android:text="Don't have an Account? Sign up!"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="17dp"
                android:onClick="GotoSignup"
                android:layout_width="match_parent"
                android:layout_marginTop="25dp"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>